--- a/Coffeshop/OrderViewController.xib
+++ b/Coffeshop/OrderViewController.xib
@@ -10,8 +10,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="OrderViewController" customModule="Coffeshop" customModuleProvider="target">
             <connections>
+                <outlet property="adressLabel" destination="Tnm-vJ-eN5" id="lUz-EU-8QO"/>
+                <outlet property="deliveryMethodLabel" destination="aKi-1F-nj9" id="DVO-AA-bcF"/>
                 <outlet property="orderMethodControl" destination="UgA-42-vvn" id="PTI-OQ-yXx"/>
-                <outlet property="textLabel" destination="Tnm-vJ-eN5" id="acz-DV-0Vr"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -26,17 +27,20 @@
                         <segment title="Deliver"/>
                         <segment title="Pick Up"/>
                     </segments>
+                    <connections>
+                        <action selector="actionSegmentControl:" destination="-1" eventType="valueChanged" id="Vfq-bS-Sdo"/>
+                    </connections>
                 </segmentedControl>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="YEL-j4-rkH">
                     <rect key="frame" x="25" y="160" width="343" height="66.333333333333314"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Deliver Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aKi-1F-nj9">
-                            <rect key="frame" x="0.0" y="0.0" width="151" height="26.333333333333332"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Adress" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aKi-1F-nj9">
+                            <rect key="frame" x="0.0" y="0.0" width="116.66666666666667" height="26.333333333333332"/>
                             <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="24"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="Tnm-vJ-eN5">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="Tnm-vJ-eN5">
                             <rect key="frame" x="0.0" y="26.333333333333343" width="343" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="LZi-pn-bH6"/>
@@ -69,6 +73,9 @@
                                 <color key="baseForegroundColor" systemColor="labelColor"/>
                                 <color key="baseBackgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </buttonConfiguration>
+                            <connections>
+                                <action selector="editAdressButton:" destination="-1" eventType="touchUpInside" id="ae7-rn-MME"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qnR-wE-GOL">
                             <rect key="frame" x="135" y="0.0" width="100" height="26"/>
